@@ -2,6 +2,7 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
+		- Use https in TVMaze.tcl sitebot plugin (thanks to teqnodude)
 		- Some more psxc-imdb fixes
 		- Fix psxc-imdb in many parts (thanks to silv3rr)
 		- ^--- 2020 ---^
